Refactored and added more to the process.

--- a/konseptdokument/process.tex
+++ b/konseptdokument/process.tex
@@ -1,1 +1,29 @@
 \section{Prosessen}
+Dette avsnittet forteller hvordan konseptet ble til ved å gå fra en
+problemstilling, til en idè og til slutt et konsept. Den første delen av
+denne prosessen var ikke iterativ, ettersom gruppen i praksis gikk fra en
+vagt definert problemstilling, til en idè, for så å redefinere
+problemstillingen litt for å bedre passe ideen. Prosessen gikk deretter
+fra idè til konsept.
+\subsection{Fra problemstilling til idè}
+Det ble brukt mye tid på å utforske forskjellige ideer som var
+interessante. Gruppen følte seg ikke veldig bundet av den opphavlige
+problemstillingen, og eksperimenterte derfor med forskjellige ideer.
+Gitt problemstillingen i Avsnitt~\ref{sec:problemstillingen} var det
+naturlig å tenke på et spill som var turbasert eller sanntidsspill med
+flere spillere.  Etter flere runder internt ble det enighet rundt
+følgende idè.
+\begin{description}\label{sec:energymp}
+\item[Energispillet med flerspillermodus] \hfill\\
+Spillere skulle organisere hver sin lille by, hvor fokuset var å
+forhandle med hverandre på grunnlag av hvilke energitype de forskjellige
+byene valgt å gå for. En by som for eksempel fokuserte på kull kunne
+raskt få mye resurser, men ville påvirke sitt eget miljø lokalt, og
+senere hele miljøet globalt.
+\end{description}
+Etter en tilbakemeldingsfase av landsbylederenen viste deg seg derimot
+at ideen ikke samsvarte godt nok med problemstillinga som var valgt.
+
+%Det ble gjort koblinger opp mot et spill lignende Advanced
+%Wars\cite{advancewars} eller Wordfeud\cite{wordfeud} med fokus på
+%miljøet.
