--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -1,5 +1,4 @@
 \section{Konseptet}
-Gitt problemstillingen i Avsnitt~\ref{sec:problemstillingen} var det naturlig å tenke seg et turbasert eller
-sanntidsspill med flere spillere. Det ble gjort koblinger opp mot et
-spill lignende Advanced Wars\cite{advancewars} eller
-Wordfeud\cite{wordfeud} med fokus på miljøet.
+Målet med dette avsnittet er å gi et innblikk i det utviklede konseptet,
+hvilke spillaspekter som er tatt med og spilldynamikken.
+
