--- a/latex/avslutning.tex
+++ b/latex/avslutning.tex
@@ -2,3 +2,6 @@
 Avslutning
 Samle trådene
 Hvilke erfaringer tar den enkelte og gruppa med seg videre?
+
+hvordan har gruppen utviklet seg?
+hvordan var den faglige kompetansen fordelt? (kan muligens også flettes inn under et annet avsnitt)
