--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -136,20 +136,20 @@ Etter at en situasjon var valgt, ble hver enkelt deltaker gitt 5 minutter til å
 -------------- Legg inn bilde av SPGR- figuren--------------
 
 Her er en oversikt over resultatene fra øvelsen:
+\begin{description}
+\item[Andreas] \hfill \\
+Andreas følte selv at han var autoritær, påståelig og utadvent. Han var redd for at han kanskje ble oppfattet som for kontrollerende, men ble overrasket da det viste seg at gruppen så på ham som samarbeidsvillig, oppmuntrende og demokratisk. 
 
-	\subsection{Andreas}
-	Andreas følte selv at han var autoritær, påståelig og utadvent. Han var redd for at han kanskje ble oppfattet som for kontrollerende, men ble overrasket da det viste seg at gruppen så på ham som samarbeidsvillig, oppmuntrende og demokratisk. 
+\item[Kjetil] \hfill \\
+Kjetil så på seg selv som kritisk, åpen og sammarbeidsvillig. Han følte også at han ble litt likegyldig etter hvert som diskusjonen utartet seg, og at det viktigste var å komme videre med prosjektet. Gruppen så på Kjetil som medfølende, utadvent og ser alle som likeverdige. Andreas følte det var Kjetil som dro i gang diskusjonen, og han så på Kjetil som kritisk og autoritær.
 
-	\subsection{Kjetil}
-	Kjetil så på seg selv som kritisk, åpen og sammarbeidsvillig. Han følte også at han ble litt likegyldig etter hvert som diskusjonen utartet seg, og at det viktigste var å komme videre med prosjektet. Gruppen så på Kjetil som medfølende, utadvent og ser alle som likeverdige. Andreas følte det var Kjetil som dro i gang diskusjonen, og han så på Kjetil som kritisk og autoritær.
+\item[Trond] \hfill \\	
+Trond hadde identifisert seg selv som åpen, demokratisk og rasjonell. Han følte også at han kunne være tilbakeholden og betvile sine egne evner. Resten av gruppen så på Trond som støttende, effektiv og vennlig. Da Trond var den eneste som argumenterte for at spillet skulle spilles i sanntid, ble han også sett på som tøff og påståelig i denne situasjonen. 
 
-	\subsection{Trond}
-	Trond hadde identifisert seg selv som åpen, demokratisk og rasjonell. Han følte også at han kunne være tilbakeholden og betvile sine egne evner. Resten av gruppen så på Trond som støttende, effektiv og vennlig. Da Trond var den eneste som argumenterte for at spillet skulle spilles i sanntid, ble han også sett på som tøff og påståelig i denne situasjonen. 
+\item[Christian] \hfill \\
+Christian mente selv at han var konkurranseinnstilt, påståelig og analytisk. Kjetil var enig i at han var litt påståelig og til tider likegyldig, men den overordnede oppfatningen gruppen hadde av Christian var at han var demokratisk, støttende og tillitsfull. Andreas følte seg hørt når han fortalte noe til Christian.
 
-	\subsection{Christian}
-	Christian mente selv at han var konkurranseinnstilt, påståelig og analytisk. Kjetil var enig i at han var litt påståelig og til tider likegyldig, men den overordnede oppfatningen gruppen hadde av Christian var at han var demokratisk, støttende og tillitsfull. Andreas følte seg hørt når han fortalte noe til Christian.
-
-
+\end{description}
 Fra denne øvelsen kan man se at samtlige gruppemedlemmer føler seg mer ekstreme i væremåten sin enn hva som oppfattes av resten av gruppen. Et eksempel på dette var at de fleste hadde markert seg seg selv som påståelige, men av andre hadde blitt markert som mer forståelsesfulle, åpne og samarbeidsvillig. Andreas lurte litt på om det kunne ha noe med at man på grunn av at man var enige med hverandre ikke oppfattet andre som påståelige da det de sier reflekterer det en selv mener. 
 
 Fremover er det derfor viktig å ha fokus på at man ikke blir for passiv. Fordi selv om man føler seg veldig dominerende, er det ikke sikkert at det er slik resten av gruppen oppfatter denne personen. Det er derfor ikke noe i veien for at gruppemedlemmene legger seg litt mer frampå og våger mer.
