--- a/problemstilling.tex
+++ b/problemstilling.tex
@@ -1,2 +1,2 @@
-Hvordan kan en belyse nytten av resirkulering og redusert forbruk,
+Hvordan kan en belyse nytten av gjenbruk og resirkulering,
 lokalt og globalt, gjennom flerspiller-dataspill
