--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -115,7 +115,7 @@ Trond syntes det var vanskelig å snevre inn sine tilbakemeldinger til en katego
 
 Kjetil likte best den rød hatten; å fortelle magefølelsen sin uten begrunnelse. Kjetil likte derimot ikke å ta på seg den kritiske rollen som en svart hatt, blandt annet fordi han selv måtte være observant på å identifisere negative sider ved presentasjonene. Han likte heller ikke at folk visste at han "nå skal den svarte hatten snakke", ettersom tilskuerne da forventer at han skal si noe negativt. De Bono beskriver dette som et av poengene med å metaforisk ha på seg en hatt. De andre skal vite hvilken rolle du har slik at du får oppmerksomheten rundt hvilken hatt du har på det. 
 
-Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha en nøytralt syn og å fokuserer på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon til vanlig.
+Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha en nøytralt syn og å fokusere på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon til vanlig.
 
 Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppemedlemmene likte og ikke likte, hvilket personligheter som framkommer under en tilbakemeldingssituasjon eller diskusjon i gruppen. Gruppen er godt representert med deltakere som liker å være kritiske og fortelle om sine intuisjoner og følelser. Christian, Andreas og Kjetil faller i disse to kategoriene, som røde og svarte hatter. Trond er et godt kreativt samt kritisk bidrag, mens Ina liker best å snakke om informasjon og muligheter. Med dette er alle hattene, unntagen den blå, representert i gruppen. Dette er med til å bidra til en effektiv gruppe som får belyst idèer, muligheter og meninger fra forskjellig vinkler. 
 
