Added some more content.

--- a/konseptdokument/process.tex
+++ b/konseptdokument/process.tex
@@ -11,9 +11,9 @@ interessante. Gruppen følte seg ikke veldig bundet av den opphavlige
 problemstillingen, og eksperimenterte derfor med forskjellige ideer.
 Gitt problemstillingen i Avsnitt~\ref{sec:problemstillingen} var det
 naturlig å tenke på et spill som var turbasert eller sanntidsspill med
-flere spillere.  Etter flere runder internt ble det enighet rundt
+flere spillere. Etter flere runder internt ble det enighet rundt
 følgende idè.
-\begin{description}\label{sec:energymp}
+\begin{description}
 \item[Energispillet med flerspillermodus] \hfill\\
 Spillere skulle organisere hver sin lille by, hvor fokuset var å
 forhandle med hverandre på grunnlag av hvilke energitype de forskjellige
@@ -21,8 +21,18 @@ byene valgt å gå for. En by som for eksempel fokuserte på kull kunne
 raskt få mye resurser, men ville påvirke sitt eget miljø lokalt, og
 senere hele miljøet globalt.
 \end{description}
-Etter en tilbakemeldingsfase av landsbylederenen viste deg seg derimot
-at ideen ikke samsvarte godt nok med problemstillinga som var valgt.
+Etter en tilbakemeldinger fra landsbylederen viste deg seg derimot at
+ideen ikke samsvarte godt nok med problemstillinga som var valgt. Dette
+førte til restrukturering av den opphavlige ideen, for å få mer fokus på
+gjenbruk og resirkulering. Følgende elementer fra ideen ble tatt med
+videre:
+\begin{itemize}
+	\item Flerspiller
+	\item Hver spiller har en base
+	\item Bruk av søppel som resurser, istedenfor energi
+	\item Lokale faktorer kan påvirke det globale miljøet
+\end{itemize}
+
 
 %Det ble gjort koblinger opp mot et spill lignende Advanced
 %Wars\cite{advancewars} eller Wordfeud\cite{wordfeud} med fokus på
