Lagt til spillbakgrunn med referanser for Ina

--- a/konseptdokument/references.tex
+++ b/konseptdokument/references.tex
@@ -11,4 +11,10 @@
 	Energispillet\\\url{http://www.energispillet.no/}
 \bibitem{advancewars}
 	Advanced Wars\\\url{http://en.wikipedia.org/wiki/Advance\_Wars}
+\bibitem{rayman}
+	Rayman\\\url{http://raymanzone.us.ubi.com/games.php}
+\bibitem{gameboy}
+	GameBoy\\\url{http://www.nintendo.co.uk/NOE/en_GB/support/game_boy__pocket__color_559_562.html}
+\bibitem{DKC2}
+	DonkeyKongCountry2\\\url{http://en.wikipedia.org/wiki/Donkey_Kong_Country_2:_Diddy%27s_Kong_Quest}
 \end{thebibliography}
