--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -27,6 +27,8 @@ stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
 konkurransespill som Counter-Strike og Warcraft. Han har i hovedsak vært
 en Nintendo fanboy\cite{fanboy}, men har i de senere år utvidet
 kolleksjonen til å omfatte Xbox.
+\item[Ina Sander Pedersen (26)] \hfill \\
+I 1996 oppdaget hun Rayman\cite{rayman} til PC og var fra den dag frelst for serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren plattform vært en klar favoritt gjennom årene og da hun senere fikk Gameboy Pocket\cite{gameboy} gikk tiden med til Donkey Kong Country 2\cite{DKC2}. Etterhvert som årene har gått har hun skiftet mellom Nintendo og Playstation, samt prøvd ut endel forskjellige sjangertyper, men Rayman og Donkey Kong seriene er og blir favoritter. 
 \end{description}
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
