--- a/konseptdokument/references.tex
+++ b/konseptdokument/references.tex
@@ -17,4 +17,16 @@
 	GameBoy\\\url{http://www.nintendo.co.uk/NOE/en_GB/support/game_boy__pocket__color_559_562.html}
 \bibitem{DKC2}
 	DonkeyKongCountry2\\\url{http://en.wikipedia.org/wiki/Donkey_Kong_Country_2:_Diddy%27s_Kong_Quest}
+\bibitem{smash}
+	SMASH\\\url{http://www.smashbros.com}
+\bibitem{wc3}
+	WC3\\\url{http://us.blizzard.com/en-us/games/war3/}
+\bibitem{diablo2}
+	Diablo\\\url{http://us.blizzard.com/en-us/games/d2/}
+\bibitem{mario64}
+	Mario64\\\url{http://www.mariowiki.com/Super_Mario_64}
+\bibitem{mariokart}
+	MarioKart\\\url{http://www.mariokart64.com/}
+\bibitem{tekken}
+	Tekken\\\url{http://tekken.namco.com/}
 \end{thebibliography}
