--- a/latex/abstract.tex
+++ b/latex/abstract.tex
@@ -1,13 +1,8 @@
-\section{Abstrakt}
-
-
-
-Denne rapporten beskriver konseptualisering og produksjon av et 
-
-
-\emph{Garbage Alert} er et spill som skal redde verden gjennom å opplyse menneskeheten om viktigheten av resirkulering og gjenbruk. Dette gjøres ved å abstrahere konseptet ...
-
-se på søppel som en ressurs som kan brukes om igjen.
-
-
-En stor del av faget går ut på hvordan beslutninger og samarbeid har foregått innad i gruppen. Denne rapporten vil derfor beskrive disse prosessene.
+\begin{abstract}
+\emph{Garbage Alert} er et spill som skal redde verden gjennom å opplyse
+menneskeheten om viktigheten av resirkulering og gjenbruk. Dette gjøres
+ved å abstrahere konseptet ...
+En stor del av faget går ut på hvordan beslutninger og samarbeid har
+foregått innad i gruppen. Denne rapporten vil derfor beskrive disse
+prosessene.
+\end{abstract}
