--- a/prosessrapport/Rapport.tex
+++ b/prosessrapport/Rapport.tex
@@ -14,7 +14,6 @@
 
 %%% BEGIN DOCUMENT
 \begin{document}
-\include{dynamic} % 
 \input{title.tex} % TITLE PAGE
 
 \tableofcontents
@@ -22,9 +21,7 @@
 \newpage
 
 % Sections
-\begin{abstract}
-Oppsummering av rapporten, 200 ord. Relatere til EiTs læringsmål.
-\end{abstract}
+\include{abstract}
 
 % Innledning
 \include{innledning}
@@ -39,6 +36,7 @@ Oppsummering av rapporten, 200 ord. Relatere til EiTs læringsmål.
 \include{avslutning}
 
 % Referanser
-\include{referanser}
+\bibliographystyle{plain}
+\bibliography{sources}
 
 \end{document}
