Converted references into bibliography. Set norwegian name of the references.

--- a/prosessrapport/Rapport.tex
+++ b/prosessrapport/Rapport.tex
@@ -12,6 +12,9 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % command to make the lines in title page
 \linespread{1.2}
 
+% Redefinere referansesaken
+\renewcommand{\refname}{Referanser}
+
 %%% BEGIN DOCUMENT
 \begin{document}
 \input{title.tex} % TITLE PAGE
@@ -37,6 +40,6 @@
 
 % Referanser
 \bibliographystyle{plain}
-\bibliography{sources}
+\bibliography{referanser}
 
 \end{document}
