delt inn i underkapittel

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -1,4 +1,12 @@
 \section{Konseptet}\label{sec:konsept}
+
+\subsection{Introduksjon}
+\subsection{Spillanalyse}
+\subsection{Spillatmosfære}
+\subsection{Game Play}
+\subsection{Nøkkelfunksjoner}
+\subsection{Selling Features}
+
 Målet med dette avsnittet er å gi et innblikk i det utviklede konseptet,
 hvilke spillaspekter som er tatt med og spilldynamikken.
 
