--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -2,3 +2,13 @@
 % Definitions should include how a player wins, loses, passes levels and
 % the main focus of the game play.
 \subsection{Definisjoner}
+Dette avsnittet skal forklare de grunnleggende definisjonene rundt
+Garbarge Alert. Definisjonene er i hovedsak sentrert rundt hvordan
+spilleren oppfatter spillet~\cite{gameplay}.
+\subsubsection{Vinning}
+En spiller har vunnet dersom alle de andre spillerene har mistet
+gjenvinningsstasjonene sine, eller spilleren klarer å blit kvitt alt
+søppelet på sin øy.
+\subsubsection{Taping}
+En spiller taper dersom gjenvinningsstajonen dens blir ødelagt. Spilleren
+vil også tape dersom en annen spiller klarer å renske sin øy for søppel.
