lagt til info om Andreas, pluss referanser

--- a/konseptdokument/references.tex
+++ b/konseptdokument/references.tex
@@ -29,4 +29,16 @@
 	MarioKart\\\url{http://www.mariokart64.com/}
 \bibitem{tekken}
 	Tekken\\\url{http://tekken.namco.com/}
+\bibiten{supermarioworld}
+	Super Mario World\\\url{http://www.mariowiki.com/Super_Mario_World}
+\bibiten{supernintendo}
+	Super Nintendo Entertainment System\\\url{http://www.mariowiki.com/Super_Nintendo}
+\bibiten{newsupermario}
+	New Super Mario Bros. Wii\\\url{http://www.mariowiki.com/New_Super_Mario_Bros._Wii}
+\bibiten{wii}
+	Nintendo Wii\\\url{http://www.mariowiki.com/Nintendo_Wii}
+\bibiten{cc}
+	Command \& Conquer\\\url{http://www.commandandconquer.com/}
+\bibiten{aoe}
+	Age of Empires\\\url{http://www.microsoft.com/games/empires/}
 \end{thebibliography}
