--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -31,6 +31,8 @@ kolleksjonen til å omfatte Xbox.
 I 1996 oppdaget hun Rayman\cite{rayman} til PC og var fra den dag frelst for serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren plattform vært en klar favoritt gjennom årene og da hun senere fikk Gameboy Pocket\cite{gameboy} gikk tiden med til Donkey Kong Country 2\cite{DKC2}. Etterhvert som årene har gått har hun skiftet mellom Nintendo og Playstation, samt prøvd ut endel forskjellige sjangertyper, men Rayman og Donkey Kong seriene er og blir favoritter. 
 \item[Christian Aleksander Lysne (22)] \hfill \\
 Christian var 8 år da han fikk sin første Nintendo 64\cite{n64} , med spillene Super Mario 64\cite{mario64} og Mario Kart\cite{mariokart}. Senere gikk det i Legend of Zelda\cite{legendofzelda} og Super Smash Bros\cite{smash}. Tekken\cite{tekken} var også  populært i oppveksten. Warcraft 3\cite{wc3} og Diablo 2\cite{diablo2} tok etter hvert over, og spilles fortsatt i perioder.
+\item[Andreas Røysland Aarnes (25)] \hfill \\
+Som seksåring prøvde Andreas Super Mario World\cite{supermarioworld} på Super Nintendo\cite{supernintendo} for første gang, og det var ikke før i 2011, da remaken New Super Mario Bros. Wii\cite{newsupermario} kom til Nintendo Wii\cite{wii}, at han igjen ble tilfredstilt innen spillverdenen. I mellomtiden har han låst seg til strategispill-seriene Warcraft\cite{wc3}, Command \& Conquer\cite{cc} og Age of Empires\cite{aoe}. 
 \end{description}
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
