--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -5,10 +5,33 @@ hvilke spillaspekter som er tatt med og spilldynamikken.
 
 \subsection{Introduksjon}
 
+Spillerene skal organisere hver sin lille søppelfylte øy. Målet er å
+fortest mulig kvitte seg med søppelet på sin øy. Dette kan bli gjort ved
+resirkulering, eller ved å sabotere for de andre spillerene ved å flytte
+ditt søppel over til dem. Utifra aksjonene til de forskjellige
+spillerene kan både lokale og globale katastrofer inntreffe. Spilleren
+som først rydder sin øy, eller som står igjen til sist vinner spillet.
 
-Garbage Alert er et sanntids strategispill for mobile enheter. Hver
-spiller blir tildelt en øy dekket med søppel. En øy består av en
-gjenvinningsstasjon, en våpenstasjon og en forsvarssone.
+
+\subsection{Spillanalyse}
+
+Spillbeskrivelse: Spillets sjanger er valgt til flerspiller sanntidsstrategi, men det vil også være mulighet for å spille alene mot datamaskinen. Viktige spillelementer vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (??), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende er det valgt en type tegneseriestil som vil gjøre nettopp dette. 
+
+\subsection{Spillatmosfære}
+
+This is where it is best to have a mood board or a clear description of the game’s style. 
+
+This is a good place to start interacting with a graphic designer.\\
+
+Atmosphere Mood Board\\
+Character  Units Sketch and Description\\
+A Level(Locations) Sketch and Description\\
+Audio Description
+
+\subsection{Game Play}
+
+Hver spiller blir tildelt en øy dekket med søppel. En øy består av en
+gjenvinningsstasjon, tre våpenstasjoner og en forsvarssone.
 Gjenvinningsstasjonen har som oppgave å transformere øyas søppel om til
 ressurser. Disse ressuresene kan brukes til å kjøpe våpen,
 forsvarsmurer, utvinne nye ressurser og oppgradere
@@ -24,27 +47,6 @@ gjenvinningsstasjon. Hvis en øy mister gjenvinningsstasjonen sin, vil
 den bli oversvømt med søppel og synke ned i havet. Dermed kan spilleren
 velge om han/hun vil fokusere på å forbedre sin egen øy eller ødelegge
 for andre. 
-
-\subsection{Spillanalyse}
-
-Spillbeskrivelse: Spillets sjanger er valgt til flerspiller sanntidsstrategi, men det vil også være mulighet for å spille alene mot computer. (Usikker på om vi ble enig om at dette skulle være mulig?) Viktige spillelementer vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\ 
-\\
-Game Reference / Spillreferanse: Sjønner ikke helt hva som skal være med her, spillstrategi, spillinnlevelse, referanser\\
-\\
-Spillteknisk: Den tekniske formen (technical form) på spillet er flat 2D grafikk (Eller er jeg helt på bærtur??) der visningen for spilleren vil være i et ovenfra-ned perspektiv (top-down perspective). Programvareplattform er Java (Eller ikke?) og spillet er hovedsaklig tenkt for mobilenheter.
-
-\subsection{Spillatmosfære}
-
-This is where it is best to have a mood board or a clear description of the game’s style. 
-
-This is a good place to start interacting with a graphic designer.\\
-
-Atmosphere Mood Board\\
-Character  Units Sketch and Description\\
-A Level(Locations) Sketch and Description\\
-Audio Description
-
-\subsection{Game Play}
 
 Using this outline to create a descriptive paragraph about how the game is played. 
 
