--- a/konseptdokument/references.tex
+++ b/konseptdokument/references.tex
@@ -29,16 +29,16 @@
 	MarioKart\\\url{http://www.mariokart64.com/}
 \bibitem{tekken}
 	Tekken\\\url{http://tekken.namco.com/}
-\bibiten{supermarioworld}
+\bibitem{supermarioworld}
 	Super Mario World\\\url{http://www.mariowiki.com/Super_Mario_World}
-\bibiten{supernintendo}
+\bibitem{supernintendo}
 	Super Nintendo Entertainment System\\\url{http://www.mariowiki.com/Super_Nintendo}
-\bibiten{newsupermario}
+\bibitem{newsupermario}
 	New Super Mario Bros. Wii\\\url{http://www.mariowiki.com/New_Super_Mario_Bros._Wii}
-\bibiten{wii}
+\bibitem{wii}
 	Nintendo Wii\\\url{http://www.mariowiki.com/Nintendo_Wii}
-\bibiten{cc}
+\bibitem{cc}
 	Command \& Conquer\\\url{http://www.commandandconquer.com/}
-\bibiten{aoe}
+\bibitem{aoe}
 	Age of Empires\\\url{http://www.microsoft.com/games/empires/}
 \end{thebibliography}
