Some outdated info.

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -4,6 +4,7 @@ dokumentet er strukturert, hvilke spillmessige bakgrunner hver av
 deltagerene i gruppen hadde, og hvilke mål som ble satt med tanke på å
 utvikle et spillkonsept og en eventuell prototype.
 \subsection{Struktur}
+OBS Utdatert?
 Dokumentet er strukturert på en slik måte at utviklingprosessen fra
 start til slutt blir beskrevet i kronologisk rekkefølge gjennom
 kapitlene i dokumentet. Hele dokumentet kan i hovedsak deles inn i 3
