Renaming and restructuring some files.

--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -2,9 +2,12 @@
 % Definitions should include how a player wins, loses, passes levels and
 % the main focus of the game play.
 \subsection{Definisjoner}
-Dette avsnittet skal forklare de grunnleggende definisjonene rundt
-Garbarge Alert. Definisjonene er i hovedsak sentrert rundt hvordan
-spilleren oppfatter spillet~\cite{gameplay}.
+Dette avsnittet forklare de grunnleggende definisjonene rundt Garbage
+Alert. Definisjonene er i hovedsak sentrert rundt hvordan spilleren
+oppfatter spillet~\cite{gameplay}.
+\subsubsection{Oppstart}
+Alle spillere starter med like forutsetninger. Hvordan spillet utvikler
+seg kommer an på hvordan spillerene bruke ressursene som er gitt.
 \subsubsection{Vinning}
 En spiller har vunnet dersom alle de andre spillerene har mistet
 gjenvinningsstasjonene sine, eller spilleren klarer å blit kvitt alt
@@ -12,3 +15,4 @@ søppelet på sin øy.
 \subsubsection{Taping}
 En spiller taper dersom gjenvinningsstajonen dens blir ødelagt. Spilleren
 vil også tape dersom en annen spiller klarer å renske sin øy for søppel.
+
