--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -64,7 +64,7 @@
 \include{problem}
 \include{process}
 \include{concept}
-\include{design}
+\include{spillutforming}
 \include{dynamics}
 \include{genre}
 \include{artwork}
