flyttet ting fra konsept til designdel

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -82,7 +82,7 @@ Gjenvinngsstasjonen kan oppgraderes på følgende områder:\\
 	\item Effektivitet: Hvor fort den prosesseserer en enhet søppel (dette starter seint og går raskere for hver oppgradering).
 	\item Volum/Utvinningsgrad: Hvor mye av søppelet som faktisk blir gjennvunnet. “Restavfallet” vil på magisk vis bli borte.
 	\item Buffer: Stasjonen kan få en buffer hvor spilleren kan samle opp søppel, som automatiserer gjenvinningsprosessen til en viss grad.
-	\item Ressurser: For å kunne utvinne nye typer ressurser må spilleren oppgraderegjenvinningsstasjonen. Denne oppgraderingen kan gjøres på flere forskjellige måter (her burde vi sette inn bilde av ressursoppgraderingsmønster)
+	\item Ressurser: For å kunne utvinne nye typer ressurser må spilleren oppgradere gjenvinningsstasjonen. Her får spilleren valget mellom to ulike veier som vil avgjøre hvilke ressurser spillern får tilgang til (her burde vi sette inn bilde av ressursoppgraderingsmønster)
 \end{itemize}
 
 Winning / Vinn-scenarioer:
