--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -7,6 +7,35 @@
 % Describe the terminology that you use to describe the player’s
 % properties.
 \subsection{Spillelementer}
+Bør restruktureres!!! 
+Spilleren kan utvinne ressurser ved å "dra" søppelenheter fra forskjellige plasser på øya inn til gjennvinningsstasjonen. Hvilke ressurser, og mengden av hver ressurs, som spilleren får ut fra en enkelt søppelenhet er avhengig av nivået på gjennvinningsstasjonen og hvilke typer oppgraderinger som er gjort. Spilleren kan også bruke sine våpen til å bli kvitt søppelenheter. Her vil ubehandlede søppelenheter kunne skytes på motstandere. Effekten av angrepet avhenger av spillerens våpen, oppgraderingsnivå på våpenet og motstanderens forsvar. For å beskytte seg mot angrep kan spilleren bygge mur rundt sin øy. Hvilke våpen og forsvarsmurer som spilleren kan bygge er avhengig av hvilke ressurser gjenvinningsstasjonen er i stand til å utvinne. Dette betyr at valg av typer oppgradering for gjenvinningsstasjonen vil være avgjørende for utviklingen av spillet.\\
+\\
+Game Levels / Spilloppgraderinger: 
+Spilleren har mulighet til å oppgradere både gjenvinningsstasjonen, våpen og forsvar. Hver type våpen og forsvar har tre nivå, der øking i nivå vil gi hhv. kraftigere angrep og sterkere forsvar. De tre våpenplassene på øya kan ha inneholde ulike våpen som kan oppgraderes hver for seg. (Skal vi ha med oppladningstid for våpen her??)\\
+Eksempel på forsvarsoppgradering:\\
+Tremur (nivå 1) (pil) Tremur (nivå 2) (pil) Tremur (nivå 3)\\
+\\
+Gjenvinngsstasjonen kan oppgraderes på følgende områder:\\
+\begin{itemize}
+	\item Effektivitet: Hvor fort den prosesseserer en enhet søppel (dette starter seint og går raskere for hver oppgradering).
+	\item Volum/Utvinningsgrad: Hvor mye av søppelet som faktisk blir gjennvunnet. “Restavfallet” vil på magisk vis bli borte.
+	\item Buffer: Stasjonen kan få en buffer hvor spilleren kan samle opp søppel, som automatiserer gjenvinningsprosessen til en viss grad.
+	\item Ressurser: For å kunne utvinne nye typer ressurser må spilleren oppgradere gjenvinningsstasjonen. Her får spilleren valget mellom to ulike veier som vil avgjøre hvilke ressurser spillern får tilgang til (her burde vi sette inn bilde av ressursoppgraderingsmønster)
+\end{itemize}
+
+Winning / Vinn-scenarioer:
+En spiller vinner hvis
+\begin{itemize}
+	\item han klarer å fjerne alt søppel fra sin øy før motstanderne
+	\item øyene til alle motstandere er sunket i havet fordi de blir overfylt med søppel, dvs. at han er eneste øy igjen
+\end{itemize}
+
+Losing / Tap-scenarioer:
+En spiller taper hvis
+\begin{itemize}
+	\item gjenvinningsstasjonen på øya blir ødelagt av motstanderne slik at øya blir overfylt med søppel og synker ned i havet
+	\item en av motstanderne klarer å fjerne alt søppel fra sin øy før spilleren
+\end{itemize}
 Dette avsnittet forteller om de forskjellige spillelementene som finnes
 i Garbage Alert.
 \subsubsection{Ressurser}
