--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -6,7 +6,7 @@
 
 % Describe the terminology that you use to describe the player’s
 % properties.
-\subsection{Spillelementer}
+\subsection{Elementer}
 Dette avsnittet forteller om de forskjellige spillelementene som finnes
 i Garbage Alert.
 \subsubsection{Ressurser}
@@ -20,3 +20,6 @@ Spillere kan bygge forsvar rundt øya si. Dette forsvaret vil forhindre
 motspillere å angripe gjenvinningsstasjonen. Det vil finnes ulike typer
 forsvarsmurer, som er kraftige/svake mot ulike typer angrep.
 \subsubsection{Angrep}
+En spiller får utdelt tre angrepsplattformer. På desse tre platformene
+kan spilleren velge hvilke angrep han vil utvikle, basert på hvilke
+tilgjengelige ressurser han har.
