--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -7,12 +7,13 @@ Alert. Definisjonene er i hovedsak sentrert rundt hvordan spilleren
 oppfatter spillet~\cite{gameplay}.
 \subsubsection{Oppstart}
 Alle spillere starter med like forutsetninger. Hvordan spillet utvikler
-seg kommer an på hvordan spillerene bruke ressursene som er gitt.
-\subsubsection{Vinning}
+seg kommer an på hvordan spillerene bruker ressursene han har
+opparbeidet seg. En spiller kan velge å gå for en offensiv, defansiv
+eller en nøytral strategi.
+\subsubsection{Hvordan vinne}
 En spiller har vunnet dersom alle de andre spillerene har mistet
 gjenvinningsstasjonene sine, eller spilleren klarer å blit kvitt alt
 søppelet på sin øy.
-\subsubsection{Taping}
-En spiller taper dersom gjenvinningsstajonen dens blir ødelagt. Spilleren
+\subsubsection{Hvordan tape}
+En spiller taper dersom gjenvinningsstajonen hans blir ødelagt. Spilleren
 vil også tape dersom en annen spiller klarer å renske sin øy for søppel.
-
