konsept og bilde

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -3,6 +3,15 @@
 Målet med dette avsnittet er å gi et innblikk i det utviklede konseptet,
 hvilke spillaspekter som er tatt med og spilldynamikken.
 
+\subsection{Garbage Alert}
+
+			\begin{figure} [here]
+				\begin{center}
+					\includegraphics[scale=0.5]{splashscreen}
+				\end{center}
+			\caption{Garbage Alert}
+		\end{figure}
+
 \subsection{Introduksjon}
 
 
