--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -1,16 +1,20 @@
 \section{Konseptet}\label{sec:konsept}
 
-Målet med dette avsnittet er å gi et innblikk i det utviklede konseptet,
-hvilke spillaspekter som er tatt med og spilldynamikken.
-
 \subsection{Garbage Alert}
 
 			\begin{figure} [here]
 				\begin{center}
 					\includegraphics[scale=0.5]{images/splashscreen}
 				\end{center}
-			\caption{Garbage Alert}
+			\caption{Garbage Alert splash screen}
 		\end{figure}
+
+Garbage Alert er strategispillet der du bestemmer verdens skjebne ved å utvinne og krige med søppel. Spillet blir tilgjengelig på mobile enheter. Garbage Alert har resirkulering i sentrum samtidige som det skal være et underholdende strategispill for deg mellom 9 og 99 år. 
+
+Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i Team. Spilldesignerne går under navnet Re3. Re3 består av Andreas Røysland Aarnes, Trond Kjetil Bremnes, Christian Aleksander Lysne, Kjetil Mehl og Ina Sander Pedersen.
+
+Målet med dette avsnittet er å gi deg et innblikk i det utviklede spillkonseptet,
+hvilke spillaspekter som er tatt med og spilldynamikken.
 
 \subsection{Introduksjon}
 
