Fikset bonos hatter og "info om kjetil"

--- a/prosessrapport/gruppen.tex
+++ b/prosessrapport/gruppen.tex
@@ -18,7 +18,7 @@ Da \emph{"En spillverden på ett semester"} dreier seg om det å skape og utvikl
 	Ina ser på seg selv som ryddig og presis i sitt arbeid, noe resten av gruppen er enig i. Gruppen synes at Ina er en rolig person som er mer forsiktig enn impulsiv. Men når en diskusjon begynner å bli ferdig og gruppemedlemmene begynner å bli enige, er Ina flink til å kartlegge og få kontroll over situasjonen og hva gruppen har kommet frem til. Gruppen synes hun er vennlig og aksepterende.
 
 	\subsubsection{Kjetil Mehl}
-	23 år gammel datateknikkstudent fra Rosendal. Har jobbet en del med spill tidligere. Han hadde en positiv innstilling til EiT, men var redd det kunne ta noe mye tid.
+	23 år gammel datateknikkstudent fra Rosendal. Har jobbet en del med spill tidligere.
 
 	Gruppen synes Kjetil er flink til å ha kontroll over arbeidet underveis i prosessen. Han er objektiv og analytisk, i tillegg til å være en person som holder en god stemning på gruppen. Han jobber veldig effektivt når han jobber alene, men det hender at han kan bli litt fraværende og usosial når han først er godt i gang med individuelt arbeid.
 
