--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -60,27 +60,39 @@ Prinsippet går ut på at menneskehjernen tenker på ulike måter som kan bli de
 Det er seks forskjellige kategorier man bevisst bruker i denne øvelsen, og hver av disse har fått tildelt en farget hatt som en metafor på de ulike tilstandene. De ulike kategoriene flettet inn i sitasjonen vår er:
 \\
 \\
-\begin{description}
-\item[Hvit hatt - informasjon] \hfill \\
-Her skal man bruke fakta og informasjon og gi tilbakemeldinger fra et nøytralt og objektivt perspektiv. Den hvite hatten har som mål å finne ut hva man har av fakta og hvor man kan finne mer fakta. Det er viktig å ikke bruke følelser og egne meninger når man har denne oppgaven.
+\begin{tabular}{| l | l |}
+\hline
+\bf{Farge} & \bf{Tilstand} \\
+\hline
+Hvit hatt & Informasjon \\
+Rød hatt & Følelse og intuisjon \\
+Gul hatt & Muligheter \\
+Svart hatt & Kritisk blikk \\
+Blå hatt & Prosessblikk \\
+\hline
+\end{tabular}
 
-\item[Rød hatt - følelse og intuisjon]\hfill \\
-Den røde hatten representerer egne følelser, både positive og negative. Man trenger ingen begrunnelse for hva man sier. Det er intuisjonen som er sentral.
+\vspace{1.0em}
 
-\item[Gul hatt - muligheter] \hfill \\
-Den gule hatten skal få frem positive sider og muligheter. Tilbakemeldingene skal være åpne og tankene skal være visjonære.
+% \begin{description}
+% \item[Hvit hatt - informasjon] \hfill \\
+% Her skal man bruke fakta og informasjon og gi tilbakemeldinger fra et nøytralt og objektivt perspektiv. Den hvite hatten har som mål å finne ut hva man har av fakta og hvor man kan finne mer fakta. Det er viktig å ikke bruke følelser og egne meninger når man har denne oppgaven.
 
-\item[Svart hatt - kritisk blikk] \hfill \\
-Her har man rollen som dvelens advokat. Man skal identifisere negative sider, risokoelementer og svakheter. Samtidig er det viktig å være saklig og ha fokus på forsiktighet og sårbarhet.
+% \item[Rød hatt - følelse og intuisjon]\hfill \\
+% Den røde hatten representerer egne følelser, både positive og negative. Man trenger ingen begrunnelse for hva man sier. Det er intuisjonen som er sentral.
 
-\item[Grønn hatt - kreativitet] \hfill \\
-Når man har på seg den grønne hatten er det ikke tillatt å gi kritikk. Man skal tenke kreativt og tenke over nye ideer og vekst for idèen man kommenterer.
+% \item[Gul hatt - muligheter] \hfill \\
+% Den gule hatten skal få frem positive sider og muligheter. Tilbakemeldingene skal være åpne og tankene skal være visjonære.
 
-\item[Blå hatt - prosessblikk] \hfill \\
-Her må man tenke prosesstyring. Man skal kartlegge hvor langt gruppen har kommet i prosessen, hva som trengs å gjøre og hvordan man kan ta beslutninger for å komme i mål. \\
+% \item[Svart hatt - kritisk blikk] \hfill \\
+% Her har man rollen som dvelens advokat. Man skal identifisere negative sider, risokoelementer og svakheter. Samtidig er det viktig å være saklig og ha fokus på forsiktighet og sårbarhet.
 
+% \item[Grønn hatt - kreativitet] \hfill \\
+% Når man har på seg den grønne hatten er det ikke tillatt å gi kritikk. Man skal tenke kreativt og tenke over nye ideer og vekst for idèen man kommenterer.
 
-\end{description}
+% \item[Blå hatt - prosessblikk] \hfill \\
+% Her må man tenke prosesstyring. Man skal kartlegge hvor langt gruppen har kommet i prosessen, hva som trengs å gjøre og hvordan man kan ta beslutninger for å komme i mål. \\
+% \end{description}
 
 		\begin{figure} [here]
 				\begin{center}
