Updated some more.

--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -5,11 +5,10 @@
 Dette avsnittet forklare de grunnleggende definisjonene rundt Garbage
 Alert. Definisjonene er i hovedsak sentrert rundt hvordan spilleren
 oppfatter spillet~\cite{gameplay}.
-\subsubsection{Oppstart}
-Alle spillere starter med like forutsetninger. Hvordan spillet utvikler
-seg kommer an på hvordan spillerene bruker ressursene han har
-opparbeidet seg. En spiller kan velge å gå for en offensiv, defansiv
-eller en nøytral strategi.
+\subsubsection{Oppstart} Alle spillere starter med like forutsetninger.
+Hvordan spillet utvikler seg kommer an på hvordan spillerene bruker
+ressursene han har opparbeider seg. Hvordan ressursene blir brukt kommer
+an på hvilken strategi spilleren går for.
 \subsubsection{Hvordan vinne}
 En spiller har vunnet dersom alle de andre spillerene har mistet
 gjenvinningsstasjonene sine, eller spilleren klarer å blit kvitt alt
