--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -1,21 +1,19 @@
-\section{Introduksjon}
+\section{Introduksjon}\label{sec:intro}
 Dette avsnittet skal gi et kort overblikk over hvordan resten av
 dokumentet er strukturert, hvilke spillmessige bakgrunner hver av
 deltagerene i gruppen hadde, og hvilke mål som ble satt med tanke på å
 utvikle et spillkonsept og en eventuell prototype.
 \subsection{Struktur}
-OBS Utdatert?
-Dokumentet er strukturert på en slik måte at utviklingprosessen fra
-start til slutt blir beskrevet i kronologisk rekkefølge gjennom
-kapitlene i dokumentet. Hele dokumentet kan i hovedsak deles inn i 3
-deler:
+Dokumentet er i hovedsak strukturert i 4 hoveddeler:
 \begin{enumerate}
-	\item Planleggingsfasen
-	\item Utviklingsfasen
-	\item Ferdigstillingsfasen
+	\item Introduksjon (Avsnitt~\ref{sec:intro})
+	\item Konseptet (Avsnitt~\ref{sec:konsept})
+	\item Utforming (Avsnitt~\ref{sec:design})
+	\item Teknisk (Avsnitt~\ref{sec:teknisk})
 \end{enumerate}
-Utvikling i denne konteksten går like mye på utvikling av ideen som
-utvikling av eventuell kode og produsering av grafikk.
+Konseptdelen skal gi en overordnet forståelse for hva spillet handler
+om. Utformingdelen skal gi dypere innsikt i hvordan spillet er bygd opp,
+og hvilke elementer det består av.
 \subsection{Gruppemedlemmene}
 Herunder vil den spillmessige bakgrunnen til hvert gruppemedlem bli
 beskrevet.
