--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -14,12 +14,13 @@ Ressurser er et viktig element i Garbage Alert. Ressursene er det som
 gjør at spillere kan utvikle basen sin, bygge forsvar og utvikle angrep.
 De forskjellige typene utvinnbare ressurser er:
 \begin{description}
-	\item Papp\\ Pappapp
-	\item Plast
-	\item Tre
-	\item Jern
-	\item Stål
-	\item Titan
+	\item \textbf{Papp}\\ Denne ressursen kan utvinnest uten å måtte
+oppgradere miljøstasjonen.
+	\item \textbf{Plast}
+	\item \textbf{Tre}
+	\item \textbf{Jern}
+	\item \textbf{Stål}
+	\item \textbf{Titan}
 \end{description}
 \subsubsection{Ressursutvinning}
 En spiller skaffer seg ressurser ved å gjenvinne søppel som ligger
