--- a/prosessrapport/innledning.tex
+++ b/prosessrapport/innledning.tex
@@ -25,8 +25,16 @@ egen fagkunnskap bidrar til prosjektet på."
 del i landsbyen \emph{EiT3014: En spillverden på ett semester}.
 Deltakerne i denne landsbyen deles inn i individuelle grupper på fem
 stykker, en sammensetning bestemt av landsbyens leder Maren Agdestein.
-Landsbyens tema er definert å være \emph{Hvordan skape interessante
-spill om resirkulering og gjenbruk?}. En ønsker med andre ord å skape et
+Landsbyens faglige innhold er definert å være: 
+
+\begin{quotation}
+"Studentene skal få større kunnskap om hvordan et dataspill utvikles fra 
+ide til spillbart univers, og skal gjennomføre konseptuelt designarbeid 
+basert på problemstillinger relevante for utviklingen av dataspill som 
+tar for seg gjenbruk og/eller resirkulering.""
+\end{quotation}
+
+En ønsker med andre ord å skape et
 produkt som kan bidrat til bevissgjøring av klimaspørsmål, samt å gjøre
 gjenbruk til noe morsomt og underholdende.
 
