--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -1,6 +1,6 @@
 \section{Konseptet}\label{sec:konsept}
 
-\subsection{Garbage Alert}
+\subsection{Introduksjon: Garbage Alert}
 
 			\begin{figure} [here]
 				\begin{center}
@@ -9,38 +9,56 @@
 			\caption{Garbage Alert splash screen}
 		\end{figure}
 
-Garbage Alert er strategispillet der du bestemmer verdens skjebne ved å utvinne og krige med søppel. Spillet blir tilgjengelig på mobile enheter. Garbage Alert har resirkulering i sentrum samtidige som det skal være et underholdende strategispill for deg mellom 9 og 99 år. 
+Garbage Alert er strategispillet der du bestemmer verdens skjebne ved å gjenvinne og krige med søppel. Spillet har resirkulering i sentrum samtidige som det skal være et underholdende strategispill for deg mellom 9 og 99 år. 
+
+Man starter på en øy overfyllt med søppel. Målet med spillet er å bli kvitt søppelet. Ved å gjenvinne avfallet får man ulike muligheter til å bombandere de andre spillerne, forsvare sin egen øy, for så å stå igjen som vinneren på en øy uten søppel, eller som eneste spiller i live.
 
 Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i Team. Spilldesignerne går under navnet Re3. Re3 består av Andreas Røysland Aarnes, Trond Kjetil Bremnes, Christian Aleksander Lysne, Kjetil Mehl og Ina Sander Pedersen.
 
 Målet med dette avsnittet er å gi deg et innblikk i det utviklede spillkonseptet,
 hvilke spillaspekter som er tatt med og spilldynamikken.
 
-\subsection{Introduksjon}
+%Garbage Alert er et sanntids strategispill for mobile enheter. Hver
+%spiller blir tildelt en øy dekket med søppel. En øy består av en
+%gjenvinningsstasjon, en våpenstasjon og en forsvarssone.
+%Gjenvinningsstasjonen har som oppgave å transformere øyas søppel om til
+%ressurser. Disse ressuresene kan brukes til å kjøpe våpen,
+%forsvarsmurer, utvinne nye ressurser og oppgradere
+%gjennvinningsstasjonen. Mulige oppgraderinger for gjenvinningsstasjonen
+%er raskere gjennvinning og større kapasitet for inntak av søppel. Våpen
+%brukes til å skyte søppel på motstandernes øyer, og forsvarsmuren har
+%som oppgave å blokkere slike angrep. 
 
-
-Garbage Alert er et sanntids strategispill for mobile enheter. Hver
-spiller blir tildelt en øy dekket med søppel. En øy består av en
-gjenvinningsstasjon, en våpenstasjon og en forsvarssone.
-Gjenvinningsstasjonen har som oppgave å transformere øyas søppel om til
-ressurser. Disse ressuresene kan brukes til å kjøpe våpen,
-forsvarsmurer, utvinne nye ressurser og oppgradere
-gjennvinningsstasjonen. Mulige oppgraderinger for gjenvinningsstasjonen
-er raskere gjennvinning og større kapasitet for inntak av søppel. Våpen
-brukes til å skyte søppel på motstandernes øyer, og forsvarsmuren har
-som oppgave å blokkere slike angrep. 
-
-Det er flere muligheter for å vinne i dette spillet. Det første
-vinnsenarioet er å bli den første til å kvitte seg med alt søppelet på
-øyen sin. Den andre måten å vinne på er å skyte i stykker motstandernes
-gjenvinningsstasjon. Hvis en øy mister gjenvinningsstasjonen sin, vil
-den bli oversvømt med søppel og synke ned i havet. Dermed kan spilleren
-velge om han/hun vil fokusere på å forbedre sin egen øy eller ødelegge
-for andre. 
+%vinnsenarioet er å bli den første til å kvitte seg med alt søppelet på
+%øyen sin. Den andre måten å vinne på er å skyte i stykker motstandernes
+%gjenvinningsstasjon. Hvis en øy mister gjenvinningsstasjonen sin, vil
+%den bli oversvømt med søppel og synke ned i havet. Dermed kan spilleren
+%velge om han/hun vil fokusere på å forbedre sin egen øy eller ødelegge
+%for andre. 
 
 \subsection{Spillanalyse}
 
-Spillbeskrivelse: Spillets sjanger er valgt til flerspiller sanntidsstrategi, men det vil også være mulighet for å spille alene mot computer. (Usikker på om vi ble enig om at dette skulle være mulig?) Viktige spillelementer vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\ 
+Garbage Alert er et flerspiller sanntidsstrategispill, men muligheten for å spille alene mot pc-en finnes også. 
+Man starter med en øy som består av et resikuleringssenter, en våpenstasjon og en forsvarssone. De sentrale spillelementene består av å samle inn søppel til resirkuleringsstasjonen, gjenvinne søppelet og bruke ressursene man får fra gjenvinningsprosessen til å bygge våpen og forsvar, og til å oppgradere ulike elementer i spillet. Målet er å bli kvitt alt søppelet, noe som skjer på to måter. Når man gjenvinner søppelet, forsvinner det, og man står igjen med ressurser. I tillegg til dette kan man skyte søppel på de andre spillerne for å øke søppelmengden deres. Dette kan unngås ved å bygge forsvar.
+Likevel må man hele tiden bruke ressursene sine på å bygge bedre våpen og forsvar, samt å øke utvinningsgraden til resirkuleringssenteret. Oppgraderingene man gjør er grunnlaget for taktikken spilleren velger for å vinne spillet. Dette vil bli beskrevet mer nøyaktig i avsnitt %AVSNITT=?
+
+
+Når man starter spillet har man følgende elementer:
+
+\begin{itemize}
+	\item et resirkuleringssenter
+	\item en våpenstasjon
+	\item en forsvarssone
+	\item 10 enheter med papp i inventaret
+	\item 1000 enheter med søppel
+	\item muligheten til å gjenvinne papp fra søppelet. Gjenvinningsgraden er 10%
+	\item muligheten til å bruke papp til å bygge våpen (papirfly) og forsvar (pappmur)
+	\item muligheten til å oppgradere gjenvinningsgraden til 20%
+	\item muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
+\end{itemize}
+
+
+De sentrale spillelementene består av å samle inn søppel til resikulerings vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\ 
 \\
 Game Reference / Spillreferanse: Sjønner ikke helt hva som skal være med her, spillstrategi, spillinnlevelse, referanser\\
 \\
