slaatt sammen konsept og spillutforming

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -1,4 +1,4 @@
-\section{Konseptet}\label{sec:konsept}
+\section{Konsept og spillutforming}\label{sec:konsept}
 
 \subsection{Introduksjon: Garbage Alert}
 
@@ -119,4 +119,8 @@ Number/Type Modes
 
 Denne delen trenger vi vell ikke å ha med?
 
-
+\input{definisjoner}
+\input{spillmatrise}
+\input{spillelement}
+\input{spillerpremier}
+\input{ui}
