--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -48,13 +48,22 @@ Når man starter spillet har man følgende elementer:
 	\item en forsvarssone
 	\item 10 enheter med papp i inventaret
 	\item 1000 enheter med søppel
-	\item muligheten til å gjenvinne papp fra søppelet. Gjenvinningsgraden er 10%
+	\item muligheten til å gjenvinne papp fra søppelet. Gjenvinningsgraden er 10\%
 	\item muligheten til å bruke papp til å bygge våpen (papirfly) og forsvar (pappmur)
-	\item muligheten til å oppgradere gjenvinningsgraden til 20%
+	\item muligheten til å oppgradere gjenvinningsgraden til 20\%
 	\item muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
 \end{itemize}
 
+Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man får mer avanserte våpen, forsvar og oppgraderinger. Man starter med å kun gjenvinne papp. Figur xx viser mulighetene man har for å oppgradere resirkuleringssenteret slik at man får muligheten til å gjenvinne andre ressurser. For eksempel hvis man skal oppgradere til stål, må man først oppgradere til plast. For å oppgradere til titan kreves det at alle andre oppgraderinger allerede er utført.
 
+			\begin{figure} [here]
+				\begin{center}
+					\includegraphics[scale=0.5]{images/oppgraderingstre}
+				\end{center}
+			\caption{Ressursoppgraderinger}
+		\end{figure}
+		
+		
 De sentrale spillelementene består av å samle inn søppel til resikulerings vil være samling, ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)
 \\
 Game Reference / Spillreferanse: Sjønner ikke helt hva som skal være med her, spillstrategi, spillinnlevelse, referanser
