--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -162,7 +162,7 @@ Trond hadde identifisert seg selv som åpen, demokratisk og rasjonell. Han følt
 Christian mente selv at han var konkurranseinnstilt, påståelig og analytisk. Kjetil var enig i at han var litt påståelig og til tider likegyldig, men den overordnede oppfatningen gruppen hadde av Christian var at han var demokratisk, støttende og tillitsfull. Andreas følte seg hørt når han fortalte noe til Christian.
 
 \item[Ina] \hfill \\
-Ina synes selv hun var samarbeidsvillig, påståelig og medfølende. Men følte også at hun var noe varsom og betvilte sine egne evner.
+Ina synes selv hun var samarbeidsvillig, påståelig og medfølende. Men følte også at hun var noe varsom og betvilte sine egne evner. Andreas var enig i at Ina var samarbeidsvillig og medfølende, mens Christian følte hun var forsiktig, men bestemt. Gruppen så på Ina som både åpen og demokratisk.  
 
 \end{description}
 Fra denne øvelsen kan man se at samtlige gruppemedlemmer føler seg mer ekstreme i væremåten sin enn hva som oppfattes av resten av gruppen. Et eksempel på dette var at de fleste hadde markert seg seg selv som påståelige, men av andre hadde blitt markert som mer forståelsesfulle, åpne og samarbeidsvillig. Andreas lurte litt på om det kunne ha noe med at man på grunn av at man var enige med hverandre ikke oppfattet andre som påståelige da det de sier reflekterer det en selv mener. 
